--- a/index.html
+++ b/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
-<style>
-  .node {
-    cursor: pointer;
-  }
-
-  .node circle {
-    fill: #fff;
-    stroke: steelblue;
-    stroke-width: 1.5px;
-  }
-
-  .node text {
-    font: 10px sans-serif;
-  }
-
-  .link {
-    fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
-  }
-</style>
-<body>
-  <script src="//d3js.org/d3.v3.min.js"></script>
-  <script src="index.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="info">
+      <h1 id="name"></h1>
+      <p id="functions"></p>
+    </div>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="index.js"></script>
+  </body>
+</html>
