--- a/index.html
+++ b/index.html
@@ -8,9 +8,58 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="info">
+    <div id="info" class="hide">
       <h1 id="name"></h1>
       <p id="functions"></p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="371"
+        height="473"
+        viewBox="0 0 371 473"
+        id="shapes"
+      >
+        <defs>
+          <clipPath id="clip-path">
+            <rect width="371" height="473" fill="none" />
+          </clipPath>
+          <clipPath id="clip-path-2">
+            <rect
+              id="Rectangle_73"
+              data-name="Rectangle 73"
+              width="371"
+              height="473"
+              transform="translate(0 177)"
+              fill="#fff"
+              stroke="#707070"
+              stroke-width="1"
+            />
+          </clipPath>
+        </defs>
+        <g
+          id="Repeat_Grid_5"
+          data-name="Repeat Grid 5"
+          clip-path="url(#clip-path)"
+        >
+          <g transform="translate(0 -177)">
+            <g
+              id="Mask_Group_1"
+              data-name="Mask Group 1"
+              clip-path="url(#clip-path-2)"
+            >
+              <path
+                id="Path_134"
+                data-name="Path 134"
+                d="M1990,553.622s367.963-24.813,450.751-73.194,184.948-232.6,228.238-237.893"
+                transform="translate(-2383.989 33.503)"
+                fill="none"
+                stroke="#000"
+                stroke-width="2"
+              />
+            </g>
+          </g>
+        </g>
+      </svg>
     </div>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="index.js"></script>
