--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <select id="selectButton"></select>
+
     <div id="info" class="hide">
       <h1 id="name"></h1>
       <p id="functions"></p>
