--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <select id="selectButton"></select>
-
     <div id="info" class="hide">
       <h1 id="name"></h1>
       <p id="functions"></p>
@@ -63,6 +61,9 @@
         </g>
       </svg>
     </div>
+
+    <select id="selectButton"></select>
+    <div id="dataviz"></div>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="index.js"></script>
   </body>
