--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <h1>Morphological Chart</h1>
+      <h2>Biomaterial toolkit</h2>
+      <select id="selectButton"></select>
+    </header>
     <div id="info" class="hide">
       <h1 id="name"></h1>
       <p id="functions"></p>
@@ -61,8 +66,6 @@
         </g>
       </svg>
     </div>
-
-    <select id="selectButton"></select>
     <div id="dataviz"></div>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="index.js"></script>
