--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="info" class="hide">
       <h1 id="name"></h1>
       <p id="functions"></p>
+      <div id="example"></div>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
