--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Morphological Chart</h1>
       <h2>Biomaterial toolkit</h2>
       <select id="selectButton"></select>
+      <select id="selectCat"></select>
     </header>
     <div id="info" class="hide">
       <h1 id="name"></h1>
