--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       </div>
     </header>
     <div id="info" class="hide">
-      <h1 id="name"></h1>
-      <p id="functions"></p>
-      <div id="example"></div>
+      <p id="close"></p>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -73,6 +71,14 @@
           </g>
         </g>
       </svg>
+      <div class="container">
+        <div class="infoitem">
+          <p id="category"></p>
+          <h1 id="name"></h1>
+          <p id="functions"></p>
+        </div>
+        <div id="example"></div>
+      </div>
     </div>
     <div id="dataviz"></div>
     <script src="//d3js.org/d3.v3.min.js"></script>
