--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <div class="infoitem">
           <p id="category"></p>
           <h1 id="name"></h1>
+          <p id="origin"></p>
           <p id="functions"></p>
         </div>
         <div id="example"></div>
