--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <header>
       <h1>Morphological Chart</h1>
       <h2>Biomaterial toolkit</h2>
+      <textarea
+        id="txtName"
+        name="txt-Name"
+        placeholder="Search for something.."
+      ></textarea>
+      <button>Search</button>
       <div class="filter">
         <select id="selectButton">
           <option value="" disabled selected>Base</option>
