Styling search button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           name="txt-Name"
           placeholder="Search for an ingredient..."
         ></textarea>
-        <button>Search</button>
+        <!-- <button>Search</button> -->
+        <img class="button" src="images/search.svg" />
       </div>
       <div class="filter">
         <select id="selectButton">
