--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <title>Biomaterial</title>
+    <title>Biomaterial toolkit</title>
   </head>
   <body>
     <header>
@@ -23,7 +23,6 @@
           name="txt-Name"
           placeholder="Search for an ingredient..."
         ></textarea>
-        <!-- <button>Search</button> -->
         <img class="button" src="images/search.svg" />
       </div>
       <div class="filter">
@@ -42,7 +41,7 @@
         xmlns:xlink="http://www.w3.org/1999/xlink"
         width="310"
         height="473"
-        viewBox="0 0 371 473"
+        viewBox="70 0 371 473"
         id="shapes"
       >
         <defs>
