--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header>
-      <h1>Morphological Chart</h1>
-      <h2>Biomaterial toolkit</h2>
+      <h1>Biomaterial toolkit</h1>
+      <!-- <h2>Biomaterial toolkit</h2> -->
       <div class="search">
         <textarea
           id="txtName"
