--- a/index.html
+++ b/index.html
@@ -15,8 +15,25 @@
   </head>
   <body>
     <header>
-      <h1>Biomaterial toolkit</h1>
-      <!-- <h2>Biomaterial toolkit</h2> -->
+      <h1>The Biomaterial Toolkit</h1>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="62.283"
+        height="1"
+        viewBox="0 0 62.283 1"
+      >
+        <line
+          id="Line_3"
+          data-name="Line 3"
+          x2="61.283"
+          transform="translate(0.5 0.5)"
+          fill="none"
+          stroke="#000"
+          stroke-linecap="round"
+          stroke-width="1"
+        />
+      </svg>
+
       <div class="search">
         <textarea
           id="txtName"
