--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <title>Biomaterial toolkit</title>
+    <title>The Biomaterial Toolkit</title>
   </head>
   <body>
     <header>
