Close button fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       </div>
     </header>
     <div id="info" class="hide">
-      <p id="close"></p>
+      <div id="close"></div>
+      <!-- <p id="close"></p>
+      -->
       <svg
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -112,7 +114,9 @@
             <p id="functions"></p>
           </div>
         </div>
-        <div id="cards"></div>
+        <div id="cards">
+          <h2>Related ingredients</h2>
+        </div>
       </div>
     </div>
     <div id="dataviz"></div>
