--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
     </header>
     <div id="info" class="hide">
       <div id="close"></div>
-      <!-- <p id="close"></p>
-      -->
       <svg
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -108,9 +106,9 @@
         <div class="infoitem">
           <div class="category"></div>
           <h1 id="name"></h1>
-          <div class="subtext">
+          <div class="subText">
             <p id="origin"></p>
-            <p id="functionstitle">Functions</p>
+            <p id="functionsTitle"></p>
             <p id="functions"></p>
           </div>
         </div>
