--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </select>
       </div>
     </header>
-    <div id="info" class="hide">
+    <div id="popup" class="hide">
       <div id="close"></div>
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,7 @@
         </g>
       </svg>
       <div class="container">
-        <div class="infoitem">
+        <div class="info">
           <div class="category"></div>
           <h1 id="name"></h1>
           <div class="subText">
